--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ padding: 0;}
 body{width: 100%;
     background-color: rgb(255, 255, 255);
     font-family: "Lora", serif; 
-height: 2000px;} 
+height: 1000px;} 
 .lora-uniquifier {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
@@ -46,3 +46,6 @@ display: flex; flex-direction: row; justify-content: space-between; align-items:
 .baslıklar3 {display: flex; flex-direction: column; height: 60px; }
 .mp2{ width: 500px; height: 500px;display: flex; flex-direction: column;  scale: 90%;}
 .revit{ width: 500px; height: 500px; display: flex; flex-direction: column; scale: 100%;}
+.eskiz{ width: 500px; height: 500px;display: flex; flex-direction: column;}
+.iletişim{ width: 100%; height: 50px; background-color: rgb(123, 123, 123);}
+.mail{width: 100%; height: 100px; background-color: rgb(123, 123, 123);}
