--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ padding: 0;}
 body{width: 100%;
     background-color: rgb(255, 255, 255);
     font-family: "Lora", serif; 
-height: 1000px;} 
+} 
 .lora-uniquifier {
   font-family: "Lora", serif;
   font-optical-sizing: auto;
@@ -34,19 +34,24 @@ display: flex; flex-direction: row; justify-content: space-between; align-items:
 .menu-container{ color: rgb(13, 13, 13); background-color: rgb(255, 255, 255); padding: 20px;}
 .header-container{ color: aquamarine; display: flex; justify-content: center;
 }
-.header{ width: 900px; height: 50px; display: flex; justify-content: space-between; align-items: center;}
+.header{ width: 100%; height: 100px;  display: flex; justify-content: space-between;}
 .photo-grid-container{ display: flex; justify-content: center;}
 .photo-grid{ width: 2500px; height: 600px; display: flex; justify-content: center; flex-wrap: wrap;}
-.photo-grid-item{ width: 500px; height: 500px; border: 1px solid black;
+.photo-grid-item{ width: 500px; height: auto; border: 1px solid black;
 }
 .logo{scale: 50%;}
-.social{ scale: 80%; 
-}
+
 .baslıklar2{ display: flex; flex-direction: column;height: 60px;}
 .baslıklar3 {display: flex; flex-direction: column; height: 60px; }
-.mp2{ width: 500px; height: 500px;display: flex; flex-direction: column;  scale: 90%;}
+.mp2{ width: 500px; height: auto;display: flex; flex-direction: column;  scale: 90%;}
 .revit{ width: 500px; height: 500px; display: flex; flex-direction: column; scale: 100%;}
 .eskiz{ width: 500px; height: 500px;display: flex; flex-direction: column;}
 .iletişim{ width: 100%; height: 50px; background-color: rgb(123, 123, 123);}
 .mail{width: 100%; height: 100px; background-color: rgb(123, 123, 123);}
 .son{ text-align: center;}
+
+.flex{display: flex;}
+.column-flex{ flex-direction: column;}
+.padding-all-5{
+    padding: 0 5%;
+}
