--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 *{margin: 0; 
 
 padding: 0;
-scrollbar-color: #E6007E darkgreen;
+scrollbar-color: #379e91 rgb(196, 203, 205);
 scrollbar-width: thin;
 
 }
@@ -27,6 +27,11 @@ a h1:hover{
     background-color: pink;
 }
 
+.c a:hover{
+  background-color: pink;
+  text-shadow: 0 0 pink;
+}
+
 ::selection {
     background: lightgreen;
   }
@@ -37,11 +42,19 @@ h1{
 }
 
 h2{
-    font-size: 4rem;
+    font-size: 2rem;
+}
+
+h3{
+  font-size: 1rem;
 }
 
 .center{
     text-align:center;
+}
+
+.left{
+  text-align: left;
 }
 
 .flex{
@@ -63,11 +76,20 @@ h2{
 .max-width-80{
     max-width: 80%;
 }
-
-.image-child{
-    max-width: 30%;
+.max-width-70{
+  max-width: 70%;
+}
+.max-width-60{
+  max-width: 60%;
 }
 
+.image-child{
+    max-width: 24%;
+}
+
+.column-flex{
+  flex-direction: column;
+}
 .padding-5{
     padding: 0 5%;
 }
@@ -75,12 +97,92 @@ h2{
 .padding-10{
     padding: 0 10%;
 }
-.gap{
-    gap: 2%;
+
+.padding-20{
+  padding: 0 20%;
+}
+.padding-25{
+  padding: 0 25%;
 }
 
-.yataydaortala{
-    justify-content: center;
+.padding-26{
+  padding: 0 26%;
+}
+
+.padding-27{
+  padding: 0 27%
+}
+
+.padding-30{
+  padding: 2% 30%;
+}
+
+.padding-40{
+  padding: 2% 40%}
+
+  .padding-45{
+    padding: 2% 45%;
+  }
+
+.padding-about{
+  padding:40px 100px 100px 500px
+}
+
+.line-height-300{
+  line-height: 300%;
+}
+
+.text-align-left{
+  text-align: left;
+}
+.text-align-justify{
+  text-align: justify;
+}
+
+.text-shadow{
+  text-shadow: 3px 2px #9ccb24af;
+}
+
+.gap{
+    gap: 4%;
+}
+
+  .contact-button {
+    background-color: #ffffff;
+    color: #232323;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .contact-bar {
+    display: none;
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    color: #292828;
+    padding: 15px 0;
+}
+.display2{
+  display: block;
+}
+
+.mystyle {
+ display: block;
+}
+
+.close-btn {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.float-left{
+  float: left;
 }
 
 .roboto-thin {
@@ -155,7 +257,126 @@ h2{
     font-style: italic;
   }
   
+  .playfair-display-uniquifier {
+  font-family: "Playfair Display", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style:normal;
+  color: gray;
+}
+
+.playwrite-pe-100 {
+  font-family: "Playwrite PE", cursive;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.dancing-script-50{
+  font-family: "Dancing Script", cursive;
+  font-optical-sizing: auto;
+  font-weight: 50;
+  font-style:normal;
+}
 
   .page-wrapper{
     margin: 2% 0;
   }
+
+
+  .yataydaortala{
+    justify-content: center;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+img {
+    cursor: pointer;
+}
+
+.img-about{
+  width: 400px;
+}
+
+.img-eskiz{
+  width: 520px;
+  height: 360px;
+}
+
+.slider-container {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 9999;
+}
+
+.slider-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.slider-content img {
+  max-width: 80%;
+  max-height: 80%;
+  border-radius: 8px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+
+
+.slider-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  font-size: 24px;
+  color: white;
+  z-index: 10000;
+}
+
+.slider-arrow.left {
+  left: 20px;
+}
+
+.slider-arrow.right {
+  right: 20px;
+}
+
+.hover-effect {
+  color: black; /* Başlangıç rengi */
+  transition: color 0.3s ease; /* Rengin değişim süresi ve efekti */
+}
+
+
+.hover-effect {
+  color: black; 
+  font-weight: normal; 
+  transition: color 0.3s ease, font-weight 0.3s ease; 
+  cursor: pointer;
+}
+
+.hover-effect:hover {
+  color: #9ccb24; 
+  font-weight: bold; 
+  cursor: pointer;
+}
+
+.glitter-text {
+  font-size: 36px;
+  color: pink; /* pembe renk */
+  position: relative;
+  animation: glitter 1.5s linear infinite;
+}
+@keyframes glitter {
+  0% { transform: scale(1); }
+  50% { transform: scale(1.1); }
+  100% { transform: scale(1); }
+}
